welcome.lessons.welcome.bat.bool1.In3050.scala.code
def in3050(a:Int, b:Int):Boolean = {
  if (30<=a<=40 && 30<=b<=40) {return true}
  else {if (40<=a<=50 && 40<=b<=50) {return true}
        else {return false}
       }
}